-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
Windows 7, Window 8
-
8b2719b04f1177b5af0f52fce98316505f9000b (qtbase/5.6, 23.9.2015, 5.6b)
There is next method in the \qtbase\src\plugins\platforms\windows\qwindowswindow.cpp(1630):
bool QWindowsWindow::isFullScreen_sys() const
{ return window()->isTopLevel() && geometry_sys() == QWindowsScaling::mapToNative(window()->screen()->geometry()); }This code crashes our application due to missing NULL pointer check. According to Qt5 documentation window()->screen() can be zero.
For Gerrit Dashboard: QTBUG-48288 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
126233,2 | Windows: Add checks to usages of QWindow::screen(). | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |