src/plugins/platforms/windows/qwindowsscreen.cpp
@@ -20,7 +20,6 @@ DECL|function|operator <<
 DECL|function|pixelDensity
 DECL|function|removeScreen
 DECL|function|screenAtDp
-DECL|function|screenOf
 DECL|function|sharedCursor
 DECL|function|subpixelAntialiasingTypeHint
 DECL|function|topLevelAt
